Fixed background on Firefox

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,8 @@ canvas {
   z-index: -2;
   width: 100%;
   height: 100%;
+  top: 0px;
+  left: 0px;
 }
 
 input {
@@ -102,6 +104,8 @@ button:hover {
     background-position: left 85% ;
     background-repeat: no-repeat;
     background-size: cover;
+    top: 0px;
+    left: 0px;
 }
 
 #verticalForm {
@@ -344,4 +348,13 @@ margin-top: -7%;
 
 :-moz-placeholder {
   color: #F5F5F5;
+}
+
+::-moz-scrollbars-vertical{
+  width: 20px;
+}
+
+::-moz-appearance-scrollbarthumb-vertical{
+  background-color: #263238;
+  border-radius: 0px 20px 20px 0px;
 }
